@@ -4,14 +4,11 @@ import java.time.Duration;
 import java.util.concurrent.Executors;
 import java.util.stream.IntStream;
 
-/**
- * Start many virtual threads
- */
-public class ManyVirtualThreads {
+public class ManyPlatformThreads {
 
   public static void main(String[] args) {
-    try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
-      IntStream.range(0, 1_000_000).forEach(i -> executor.submit(() -> {
+    try (var executor = Executors.newFixedThreadPool(20_000)) {
+      IntStream.range(0, 20_000).forEach(i -> executor.submit(() -> {
         Thread.sleep(Duration.ofSeconds(1));
         return i;
       }));
